# board-data

./: .dockerignore  .editorconfig  .eslintignore  .gitignore  Dockerfile  README.md  eslint.config.js  package.json  pnpm-lock.yaml  pyproject.toml  release.sh  requirements.txt  start.sh  xcpcio-board-data.code-workspace
.github/workflows/: build_and_deploy.yml  deploy.yml  deploy_rating.yml  main.yml  release.yml  test.yml
data/: contest_list.json
data/index/: contest_list.json
origin-data/: acmicpc-info-siteinfo.json  gen_contest_list.py  get_contest_list.py
origin-data/ccpc/2015/: nyist_onsite.html
origin-data/ccpc/2016/: ahu_onsite.html  cuhk_online.html  cuhk_onsite.html  dlmu_onsite.html  hdu_onsite.html  jlu_onsite.html  neu_onsite.html
origin-data/ccpc/2017/: final_onsite.html  hdu_onsite.html  hrbust_onsite.html  neu_onsite.html  nwpu_onsite.html  upc_onsite.html  zstu_onsite.html
origin-data/gen-index/: gen_contest_list.py  gen_index.sh
origin-data/icpc/2009/: dhu_online.html  hit_online.html  nit_online.html  ustc_online.html  whu_online.html  (+1 more)
python/: create_site.py  gen_contest_list.py  prettify_json.py  utils.py  validate_data.py
python/tests/: test_hello_world.py
rating-data/Asia-East-CPC-2020-2021/: rating.json
rating-data/Asia-East-CPC-2021-2022/: rating.json
rating-data/Asia-East-CPC-2022-2023/: rating.json
rating-data/index/: index.json
scripts/: export-site.sh
src/: rating-config.ts  rating.ts
src/rating-config/: cn-cpc-2020-2021.ts  cn-cpc-2021-2022.ts  cn-cpc-2022-2023.ts  cn-cpc-2023-2024.ts  index.ts  utils.ts
(+2195 files in other folders)
