[project]
name = "board-data"
version = "0.1.0"
description = "XCPCIO Board Data"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.1",
    "xcpcio>=0.76.0",
]

[tool.ruff]
line-length = 120
include = ["python/**/*.py"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["python"]

[tool.hatch.build.targets.sdist]
only-include = [
    "/python",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

[dependency-groups]
dev = [
    "hatch>=1.16.1",
    "pytest>=9.0.1",
    "ruff>=0.14.7",
]
